force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Target_Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Promotion_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Promotion Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cgcloud__Transfer_Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Promotion_Template__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>Promotion Templates</relationshipLabel>
    <relationshipName>Target_Promotion_Template</relationshipName>
    <type>Lookup</type>
</CustomField>