force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__TFD_Delivery_Date_From_Offset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TFD_Delivery_Date_From_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The offset used to calculate &apos;Shipment Date From&apos; from &apos;In-Store Date From&apos;, if the
Timeframe Determination Policy is not Manual.</description>
    <inlineHelpText>Defines the offset used to calculate the &apos;Shipment Date From&apos; from &apos;In-Store Date From&apos; if Timeframe Determination Policy is &apos;Automatic Simple&apos;. Negative values are used to define an earlier date.</inlineHelpText>
    <label>Shipment Date From Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>