force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Timeframe_Determination_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Timeframe_Determination_Policy__c</fullName>
    <description>Determines if promotion dates are added by the user or automatically determined by
the system from a given pair of In-Store dates.</description>
    <inlineHelpText>Defines which policy will be used to set the promotion and tactic timeframes.</inlineHelpText>
    <label>Timeframe Determination Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Simple</fullName>
                <label>Automatic Simple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>