force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__TPO_Enable_Uplift_Prediction__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TPO_Enable_Uplift_Prediction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Uplift prediction using Einstein Predictions for this Promotion Template</description>
    <inlineHelpText>Enables Uplift prediction using Einstein Predictions for this Promotion Template</inlineHelpText>
    <label>TPO Enable Uplift Prediction</label>
    <type>Checkbox</type>
</CustomField>