force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Trade_Calendar_Color__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trade_Calendar_Color__c</fullName>
    <description>Specifies the color of the promotion in Trade Calendar.</description>
    <label>Trade Calendar Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Color_Codes</valueSetName>
    </valueSet>
</CustomField>