force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Trade_Calendar_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trade_Calendar_Relevant__c</fullName>
    <label>Trade Calendar Relevant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>