force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Transfer_Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transfer_Follow_Up_Time__c</fullName>
    <inlineHelpText>Transfer follow-up time is measured in units of days.</inlineHelpText>
    <label>Transfer Follow Up Time</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>