force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Transfer_Relevant_Phases__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transfer_Relevant_Phases__c</fullName>
    <description>Transfer Phase of the promotion</description>
    <label>Transfer Relevant Phases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Modeling</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>ForApproval</fullName>
                <label>For Approval</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>