force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Transfer_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transfer_Sales_Org__c</fullName>
    <label>Transfer Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Sales_Org</valueSetName>
    </valueSet>
</CustomField>