force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__UI_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Type__c</fullName>
    <label>UI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>StandardUI</fullName>
                <default>true</default>
                <label>StandardUI</label>
            </value>
            <value>
                <fullName>SmartUI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>