force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Use_UI_Contract__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_UI_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use UI Contract</label>
    <type>Checkbox</type>
</CustomField>