force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Used_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Used_Reference_Date__c</fullName>
    <description>Defines which date should be used for the product hierarchy resolution if promotions of this type are calculated.</description>
    <inlineHelpText>Defines which date should be used for the product hierarchy resolution if promotions of this type are calculated.</inlineHelpText>
    <label>Used Reference Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>commitdate</fullName>
                <default>true</default>
                <label>commitdate</label>
            </value>
            <value>
                <fullName>today</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>