force-app/main/default/objects/cgcloud__Promotion_Template__c/recordTypes/cgcloud__Event.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Event</fullName>
    <active>true</active>
    <label>Event</label>
</RecordType>