force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__AnchorType_CalculationMode_Combination.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__AnchorType_CalculationMode_Combination</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(cgcloud__Anchor_Type__c, &apos;CustomerSet&apos;),
            OR(ISPICKVAL(cgcloud__Calculation_Mode__c, &apos;Writeback&apos;), ISPICKVAL(cgcloud__Calculation_Mode__c, &apos;AdHoc&apos;))
            )</errorConditionFormula>
    <errorDisplayField>cgcloud__Calculation_Mode__c</errorDisplayField>
    <errorMessage>The selected Calculation Mode isn&apos;t valid for this Anchor Type.</errorMessage>
</ValidationRule>