force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__AnchorType_UIType_PromoType_Combination.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__AnchorType_UIType_PromoType_Combination</fullName>
    <active>true</active>
    <description>Anchor Type must be &apos;Customer&apos;, UI Type must be &apos;SmartUI&apos; and Promotion Type must be &apos;Promotion&apos; if the Promotion Template is Pushable.</description>
    <errorConditionFormula>AND(cgcloud__Is_Pushable__c,
          NOT(
          AND(
          OR(ISPICKVAL(cgcloud__Anchor_Type__c,&apos;Customer&apos;),
             ISPICKVAL(cgcloud__Anchor_Type__c,&apos;CustomerSet&apos;)),
          ISPICKVAL(cgcloud__UI_Type__c,&apos;SmartUI&apos;),
          ISPICKVAL(cgcloud__Promotion_Type__c,&apos;Promotion&apos;)
          )
          )
          )</errorConditionFormula>
    <errorMessage>Anchor Type must be &apos;Customer&apos;, UI Type must be &apos;SmartUI&apos; and Promotion Type must be &apos;Promotion&apos; if the Promotion Template is Pushable.</errorMessage>
</ValidationRule>