force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__AvailableProductLevel_Calculation_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__AvailableProductLevel_Calculation_Null</fullName>
    <active>true</active>
    <description>Available Product Level must not be empty if Calculation Configuration is selected.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(cgcloud__KPI_Set__c  )),ISNULL(cgcloud__Available_Product_Level__c ))</errorConditionFormula>
    <errorMessage>Available Product Level must not be empty if Calculation Configuration is selected.</errorMessage>
</ValidationRule>