force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__CalculationMode_UIType_Combination.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__CalculationMode_UIType_Combination</fullName>
    <active>true</active>
    <description>Verify that the Calculation Mode and UI Type is a valid combination</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__UI_Type__c ,&quot;SmartUI&quot;),ISPICKVAL(cgcloud__Calculation_Mode__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Calculation_Mode__c</errorDisplayField>
    <errorMessage>Select a calculation mode value when the UI type is Smart UI</errorMessage>
</ValidationRule>