force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Check_Adjustable_KPIs_Unique.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Adjustable_KPIs_Unique</fullName>
    <active>true</active>
    <errorConditionFormula>( 
(!ISBLANK(cgcloud__Adjustment_KPI_1__c) &amp;&amp; !ISBLANK(cgcloud__Adjustment_KPI_2__c)) &amp;&amp; (cgcloud__Adjustment_KPI_1__c == cgcloud__Adjustment_KPI_2__c) 
) || 
( 
(!ISBLANK(cgcloud__Adjustment_KPI_2__c) &amp;&amp; !ISBLANK(cgcloud__Adjustment_KPI_3__c)) &amp;&amp; (cgcloud__Adjustment_KPI_2__c == cgcloud__Adjustment_KPI_3__c) 
) || 
( 
(!ISBLANK(cgcloud__Adjustment_KPI_1__c) &amp;&amp; !ISBLANK(cgcloud__Adjustment_KPI_3__c)) &amp;&amp; (cgcloud__Adjustment_KPI_1__c == cgcloud__Adjustment_KPI_3__c) 
)</errorConditionFormula>
    <errorMessage>Adjustment KPIs already exists, please enter different Adjustment KPIs.</errorMessage>
</ValidationRule>