force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Check_Display_VPC_On_Calculation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Display_VPC_On_Calculation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Calculation_Mode__c, &quot;No&quot;), (cgcloud__Display_VPC__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Calculation_Mode__c</errorDisplayField>
    <errorMessage>Display VPC can&apos;t be checked if the Calculation Mode is &apos;No&apos;.</errorMessage>
</ValidationRule>