force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Check_Display_VPC_On_Promotion.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Display_VPC_On_Promotion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(cgcloud__Product_Definition_Level__c, &quot;Promotion&quot;)), (cgcloud__Display_VPC__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Product_Definition_Level__c</errorDisplayField>
    <errorMessage>Display VPC can only be checked if the Product Definition Level is &apos;Promotion&apos;.</errorMessage>
</ValidationRule>