force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Check_Product_Definition_Policy.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Product_Definition_Policy</fullName>
    <active>true</active>
    <description>Product Definition Policy can&apos;t be empty if Promotion Type on Promotion Template is &apos;Promotion&apos;.</description>
    <errorConditionFormula>AND(ISBLANK(cgcloud__Product_Definition_Policy__c),
    ISPICKVAL(cgcloud__Promotion_Type__c, &apos;Promotion&apos;)
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Product_Definition_Policy__c</errorDisplayField>
    <errorMessage>Product Definition Policy can&apos;t be empty if Promotion Type on Promotion Template is &apos;Promotion&apos;.</errorMessage>
</ValidationRule>