force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Check_Push_Process_Flow.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Push_Process_Flow</fullName>
    <active>true</active>
    <description>Pushable promotion must have process to calculate.</description>
    <errorConditionFormula>AND( 
cgcloud__Is_Pushable__c, 
ISPICKVAL(cgcloud__Push_Process_Flow__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Push_Process_Flow__c</errorDisplayField>
    <errorMessage>Pushable promotion must have process to calculate.</errorMessage>
</ValidationRule>