force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Commit_Date_Offs_Number_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Commit_Date_Offs_Number_Range_Validation</fullName>
    <active>true</active>
    <description>The range of Commit Date Offset must be between -90 to 90.</description>
    <errorConditionFormula>OR(
cgcloud__TFD_Commit_Date_Offset__c&gt; 90,
cgcloud__TFD_Commit_Date_Offset__c&lt; -90
)</errorConditionFormula>
    <errorDisplayField>cgcloud__TFD_Commit_Date_Offset__c</errorDisplayField>
    <errorMessage>The value must be between -90 and +90.</errorMessage>
</ValidationRule>