force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Consider_Account_ProductList_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Account_ProductList_Customer</fullName>
    <active>true</active>
    <description>Anchor type must be Customer when Consider Account Product List is enabled.</description>
    <errorConditionFormula>AND(cgcloud__Consider_Account_Product_List__c,NOT(ISPICKVAL(cgcloud__Anchor_Type__c, &quot;Customer&quot;)))</errorConditionFormula>
    <errorDisplayField>cgcloud__Anchor_Type__c</errorDisplayField>
    <errorMessage>Anchor type must be Customer when Consider Account Product List is enabled.</errorMessage>
</ValidationRule>