force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Consider_Promo_Rew_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Consider_Promo_Rew_cannot_be_modified</fullName>
    <active>true</active>
    <description>The Consider Promotion Rewards can&apos;t be edited after Promotion Template creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(cgcloud__Consider_Promotion_Rewards__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Consider_Promotion_Rewards__c</errorDisplayField>
    <errorMessage>The Consider Promotion Rewards can&apos;t be edited after Promotion Template creation.</errorMessage>
</ValidationRule>