force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Derivable_And_Pushable_Same_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Derivable_And_Pushable_Same_Time</fullName>
    <active>true</active>
    <description>A Promotion Template can&apos;t be Pushable and Derivable at the same time.</description>
    <errorConditionFormula>AND(
cgcloud__Is_Derivable__c = true,
cgcloud__Is_Pushable__c = true
)</errorConditionFormula>
    <errorMessage>A Promotion Template can&apos;t be Pushable and Derivable at the same time.</errorMessage>
</ValidationRule>