force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Hierarchies_With_Copy_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Hierarchies_With_Copy_Usage</fullName>
    <active>true</active>
    <description>Exactly one hierarchy with Usage as Copy must exist for Copyable Promotion Template.</description>
    <errorConditionFormula>AND(cgcloud__Is_Copyable__c, cgcloud__Number_Of_Copy_Usage_Hierarchies__c &lt;&gt; 1)</errorConditionFormula>
    <errorMessage>Exactly one hierarchy with Usage as Copy must exist for Copyable Promotion Template.</errorMessage>
</ValidationRule>