force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Hierarchies_With_Derive_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Hierarchies_With_Derive_Usage</fullName>
    <active>true</active>
    <description>At least one hierarchy with Usage as Derive must exist for Derivable Promotion Template.</description>
    <errorConditionFormula>AND(cgcloud__Is_Derivable__c, cgcloud__Number_Of_Derive_Usage_Hierarchies__c &lt; 1)</errorConditionFormula>
    <errorMessage>At least one hierarchy with Usage as Derive must exist for Derivable Promotion Template.</errorMessage>
</ValidationRule>