force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Hierarchies_With_Push_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Hierarchies_With_Push_Usage</fullName>
    <active>true</active>
    <description>Exactly one hierarchy with Usage as Push must exist for Pushable Promotion Template.</description>
    <errorConditionFormula>AND(cgcloud__Is_Pushable__c, cgcloud__Number_Of_Push_Usage_Hierarchies__c &lt;&gt; 1)</errorConditionFormula>
    <errorMessage>Exactly one hierarchy with Usage as Push must exist for Pushable Promotion Template.</errorMessage>
</ValidationRule>