force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__MegaEvent_TradeCalendar_Relevant.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__MegaEvent_TradeCalendar_Relevant</fullName>
    <active>false</active>
    <description>Trade Calendar Relevant must be &apos;Yes&apos; if the Anchor Type is &apos;None&apos;.</description>
    <errorConditionFormula>(ISBLANK(TEXT(cgcloud__Anchor_Type__c)) &amp;&amp; NOT(ISPICKVAL(cgcloud__Trade_Calendar_Relevant__c, &apos;Yes&apos;)))</errorConditionFormula>
    <errorDisplayField>cgcloud__Trade_Calendar_Relevant__c</errorDisplayField>
    <errorMessage>Trade Calendar Relevant must be &apos;Yes&apos; if the Anchor Type is &apos;None&apos;.</errorMessage>
</ValidationRule>