force-app/main/default/objects/cgcloud__Promotion_Template__c/validationRules/cgcloud__Scenario_Planning_Or_Derivable.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Scenario_Planning_Or_Derivable</fullName>
    <active>true</active>
    <description>Scenario Planning must be disabled if and only if the Promotion Template is &apos;Derivable&apos;.</description>
    <errorConditionFormula>AND(cgcloud__Is_Derivable__c , cgcloud__Enable_Scenario_Planning__c )</errorConditionFormula>
    <errorMessage>Scenario Planning must be disabled if and only if the Promotion Template is &apos;Derivable&apos;.</errorMessage>
</ValidationRule>